[package]
name = "grou-num"
version = "0.0.0"
edition = "2021"
description = "A highly experimental (i.e. unstable) big integer package"
repository = "https://github.com/Patrick-Poitras/grou_num"
license = "MIT OR Apache-2.0"
authors = ["Patrick Poitras <patrick.f.poitras@gmail.com>"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#itertools = "0.10"
unchecked_unwrap = "3.0.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_grou"
harness = false
html_reports = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1